[tool.poetry]
name = "FideLLiTTyAPI"
version = "0.1.0"
description = ""
authors = ["Waldir Borba Junior <wborbajr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.54.1"
loguru = "^0.4.1"
sqlalchemy = "^1.3.16"
uvicorn = "^0.11.5"
gunicorn = "^19.9"
mongo = "^0.2.0"
databases = "^0.2.1"
pyjwt = "^1.7"
slugify = "^0.0.1"
motor = "^2.1.0"
dynaconf = "^2.2.3"
pydantic = "^1.5.1"
bcrypt = "^3.1.7"
passlib = "^1.7.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = "^19.10b0"
isort = "^4.3.21"
pycodestyle = "^2.6.0"
autopep8 = "^1.5.2"
hypercorn = "^0.9.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
